--- a/chi2012.tex
+++ b/chi2012.tex
@@ -317,11 +317,8 @@ In order to determine whether the interaction affordances introduced in DataPale
 
 We first describe our methodology, starting with the three hypotheses we set out to test. These hypothesis pertain to the usability of DP by end-users (h1), whether DP achieves its stated goal of enabling end-users to integrate data (h2), and finally if it has an effect on task performance (h3) - either in how well people perform a task, how quickly they perform it, or if it reduces task effort, as follows:
 
-\begin{itemize}
-\item \emph{h1 -} People understand how to use DP.
-\item \emph{h2 -} People can effectively mix heterogeneous data with DP.
-\item \emph{h3 -} Use of DP improves or facilitates task performance
-\end{itemize}
+
+% heather: instead of these low-level hypotheses, i've made higher level ones that we can explicitly address in the disucssion section - the more hypotheses we have, the more we have to come back to them; since we're short on space we might as well keep it simple!
 
 %% Interaction-method specific hypotheses
 %% \begin{itemize}
@@ -332,26 +329,36 @@ We first describe our methodology, starting with the three hypotheses we set out
 %% \end{itemize}
 %% Are these interaction methods sufficient to perform common tasks %% involving heterogeneous data sources?  Does supporting these simple %% techniques facilitate task completion?
 
-\subsubsection{Study design}
+\begin{itemize}
+\item \emph{h1 -} People understand how to use DP.
+\item \emph{h2 -} People can effectively mix heterogeneous data with DP.
+\item \emph{h3 -} Use of DP improves or facilitates task performance
+\end{itemize}
+
+\subsubsection{Study and task design}
 To test these hypotheses, we designed a within-subjects lab-based A-B study in which participants were asked to perform two of four possible predefined tasks (depending on condition), with either DP (``condition A'') or a baseline interface (``condition B'') in 2 separate timed trials.  Each participant was asked to use DP for one of the trials and the baseline interface for the other; conditions were fully counterbalanced among particiants to eliminate inadvertant ordering and task bias.  
 
-The control (B) conditions were in a prepared Mac comprised of a web browser pre-loaded with a page with links to four live web sites, and an open instance of Excel with a workbook open containing spreadsheet versions of the same data as were loaded into DP for the A condition versions of the same tasks.  Other Office applications were also available for use and participants were allowed to visit other sites than the prespecified ones.  The purpose of this condition was to understand how people using standard desktop office software
-
-
+% why? why were these tasks selected? can we drop the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
 The tasks were to select a restaurant for an event or university at which to study, out of six possible choices  around four possible tasks shown in Table \ref{tab:studyfactors}.  
 
+\subsubsection{Task preparation}
+% how data was prepared for each of the tasks; exactly how the A condition was done (full screen DP in a web browser, no outside access to apps),  B condition and why
 We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choices. The shortlist of universities and restaurants were taken from the top six ranked from the Complete University Guide (for task 1 and 2), Tripadvisor (for task 3) and Yelp (for task 4).  The top six were chosen from these websites because they provide a realistic shortlist and are comparable in terms of rankings and properties. The web sites used as data sources were chosen because they are the most popular and contain comparable statistics for universities and restaurants.
 
+% why was the B condition set up this way? What did we seek to achieve?
+The control (B) conditions were in a prepared Mac comprised of a web browser pre-loaded with a page with links to four live web sites, and an open instance of Excel with a workbook open containing spreadsheet versions of the same data as were loaded into DP for the A condition versions of the same tasks.  Other Office applications were also available for use and participants were allowed to visit other sites than the prespecified ones.  The purpose of this condition was to understand how people using standard desktop office software
+
 \subsection{Data Collection}
-Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to speak out loud their thought process and what they were looking at, so that we could evaluate their reasoning behind their processes.  At the end of the study the participant completed an exit survey.  
+Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to follow a \emph{think-aloud} protocol as they worked, so that we could understand the reasoning behind their actions.  At the end of the study, the participant completed an exit survey.   
 
-In each trials, participants were given a paper notepad and pen to use if they wished.  Screen capture software recorded all interactions with applications.  Participants were asked to follow a \emph{think-aloud} protocol as they performed each task, and audio recordings (synchronized with the screen recordings) were taken. 
+% In each trials, participants were given a paper notepad and pen to use if they wished.  Screen capture software recorded all interactions with applications.  Participants were asked to follow a \emph{think-aloud} protocol as they performed each task, and audio recordings (synchronized with the screen recordings) were taken. 
 
-% This goes in results: The studies lasted 40 minutes, on average.  
+% This goes in results: 
+% The studies lasted 40 minutes, on average.  
 Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn't influence the study.  The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies' data and to revisit protocols, if necessary.
 
 
-\subsection{Participants}
+\subsection{Participant recruitement}
 We recruited participants through adverts posted near the University campus and e-mails to student mailing lists.  We screened participants to be at least 18 years of age, but did not filter or preferentially select particpants based on any other criteria.  We took the first 20 that signed up and that successfully specified time slots that were available.   As described below in results, we ended up getting a large number of international students, who had varying proficiency in English.  Since all such participants had passed the requisite proficiency tests to enrol at University, we did not think this would substantially impact results.
 
 \subsection{Task Design}
